fix for findbugs issues
svn path=/trunk/; revision=47248


Former-commit-id: 320b5df70013587511a89af44f57a73d2ae44acd